--- a/webtest/index.html
+++ b/webtest/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/webtest/style.css">
 </head>
 <body>
-    <h1>Hello Git</h1>
+    <h1 style="background-color: aqua;">Hello Git</h1>
+
 </body>
 </html>
